fix video spacing

--- a/src/App.css
+++ b/src/App.css
@@ -146,4 +146,10 @@
   justify-content: center;
 }
 
+.workout-wrapper{
+  margin-top:60px;
+
+  
+}
+
 
